--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,7 @@
     <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.5.3/firepad.css" />
     <script src="https://cdn.firebase.com/libs/firepad/1.5.3/firepad.min.js"></script>
 
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata|Fira+Code&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
