--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,6 @@
     <meta name="theme-color" content="#000000" />
     <title>QuaverSeries: Skeuomorphic live coding</title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/icon.png" />
-    <link rel="stylesheet" href="https://stackedit.io/style.css" />
 
     <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-auth.js"></script>
@@ -26,6 +25,7 @@
     <link rel="stylesheet" href="https://cdn.firebase.com/libs/firepad/1.5.3/firepad.css" />
     <script src="https://cdn.firebase.com/libs/firepad/1.5.3/firepad.min.js"></script>
 
+    <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Fira+Code&display=swap" rel="stylesheet">
   </head>
   <body>
