--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
 
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Fira+Code&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=B612+Mono&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
