--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <title>QuaverSeries: Skeuomorphic live coding</title>
+    <!-- <title> ● ○ ○ ○ </title> -->
+    <title> _ </title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/icon.png" />
+    
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 
     <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.0.0/firebase-auth.js"></script>
