--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="theme-color" content="#000000" />
     <!-- <title> ● ○ ○ ○ </title> -->
-    <title> _ </title>
+    <title> ƛ </title>
     <link rel="shortcut icon" href="%PUBLIC_URL%/icon.png" />
     
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
